[PB-11] Add endpoints documentation
also added [PB-05] endpoints documentation
